--- a/ARM/Milandr/Eval_1968BE92Q/From Lyonya/Samples/Sample 2.1/_Project/Objects/1986BE92U.build_log.htm
+++ b/ARM/Milandr/Eval_1968BE92Q/From Lyonya/Samples/Sample 2.1/_Project/Objects/1986BE92U.build_log.htm
@@ -28,14 +28,20 @@ Project File Date:  03/11/2020
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target '1986VE92U'
 compiling led.c...
+..\User\link.h(15): error:  #5: cannot open source input file "1986BE9x.h": No such file or directory
+  #include "1986BE9x.h"
+..\User\led.c: 0 warnings, 1 error
 compiling btn.c...
+..\User\link.h(15): error:  #5: cannot open source input file "1986BE9x.h": No such file or directory
+  #include "1986BE9x.h"
+..\User\btn.c: 0 warnings, 1 error
 compiling main.c...
+..\User\link.h(15): error:  #5: cannot open source input file "1986BE9x.h": No such file or directory
+  #include "1986BE9x.h"
+..\User\main.c: 0 warnings, 1 error
 assembling startup_MDR32F9Qx.s...
 compiling system_MDR32F9Qx.c...
-linking...
-Program Size: Code=976 RO-data=224 RW-data=4 ZI-data=1636  
-FromELF: creating hex file...
-".\Objects\1986VE92U.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\1986VE92U.axf" - 3 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,11 +60,12 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: Keil::Device:Startup:1.5
+      Include file:  Libraries\CMSIS\CM3\CoreSupport\core_cm3.h
       Source file:   Libraries\CMSIS\CM3\DeviceSupport\MDR32F9Qx\startup\arm\startup_MDR32F9Qx.s
+      Include file:  Libraries\CMSIS\CM3\DeviceSupport\MDR32F9Qx\startup\arm\system_MDR32F9Qx.h
       Source file:   Libraries\CMSIS\CM3\DeviceSupport\MDR32F9Qx\startup\arm\system_MDR32F9Qx.c
       Include file:  Config\MDR32F9Qx_config.h
-      Include file:  Libraries\CMSIS\CM3\DeviceSupport\MDR32F9Qx\startup\arm\system_MDR32F9Qx.h
-      Include file:  Libraries\CMSIS\CM3\CoreSupport\core_cm3.h
+Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
